# peerswaprpc/peerswaprpc.swagger.json
@@ -599,6 +599,14 @@
         "paidFee": {
           "type": "string",
           "format": "uint64"
+        },
+        "swapInPremiumRate": {
+          "type": "string",
+          "format": "int64"
+        },
+        "swapOutPremiumRate": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
@@ -700,6 +708,10 @@
         "lndChanId": {
           "type": "string",
           "format": "uint64"
+        },
+        "premiumAmount": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
